[tool.poetry]
name = "hypermodern-cookbook"
version = "0.1.0"
description = "Cookbook of Claudio Jolowicz's hypermodern python article and repo"
authors = ["hrokr <alex.rook@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ['cookbook', 'hypermodern']
homepage = "https://github.com/hrokr/hypermodern-cookbook"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
hypermodern-cookbook = "hypermodern_cookbook.console:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
